2006-01-22  Peter Johanson <peter@peterjohanson.com>

	* configure.in: Add vi to ALL_LINGUAS.
	* NEWS: Add a bunch of translation updates/adds that I missed by not
	scanning po/ChangeLog, and fix one attribution based on po/ChangeLog.

2006-01-22  Peter Johanson <peter@peterjohanson.com>

	* src/FileUtils.cs: Use gnome-vfs to get the URI from the local path,
	instead of just prepending "file://". Fixes issues with special
	characters like '?', '#', etc. in filenames. Patch from Brian Kerrick
	Nickel <brian.nickel@gmail.com>. Fixes bug #305895.

2006-01-21  Peter Johanson <peter@peterjohanson.com>

	* src/About.cs: Fix extra space in copyright string.
	* src/Player.cs:
	* src/PlaylistWindow.cs: Fix bug where Player.Position is equal to the
	final position of the previous song during the SongChangedEvent,
	instead of 0. Should finally resolve the issue with the muinescrobbler
	plugin.

2006-01-19  Peter Johanson <peter@peterjohanson.com>

	* src/About.cs: Add new copyright year.
	* NEWS:
	* configure.in: Bump to 0.8.4pre1

2006-01-19  Peter Johanson <peter@peterjohanson.com>

	* doc/Makefile.am: Actually fix docs generation, not 1/2 fix it like
	had previously been done.
	* doc/en/*: Update all the documentation files. No new actual
	documentation, just new monodoc tool updates.

2006-01-19  Peter Johanson <peter@peterjohanson.com>

	* src/CoverGetter.cs: Fix some (potential) null references in the
	MusicBrainz fetching code.

2006-01-19  Peter Johanson <peter@peterjohanson.com>

	* src/PlaylistWindow.cs: Remove extra Console.WriteLine that snuck in.

2006-01-19  Peter Johanson <peter@peterjohanson.com>

	* src/PlaylistWindow.cs: Change SongChanged private method to accept a
	'fire_event' boolean for whether to fire the SongChanged event or not.
	Add an overload that sets fire_event=true, as this is the common case.
	Make use of this overload to *not* fire a SongChanged from
	OnSongChanged when we really just want to update the song info in the